# qjournal

./: AUDIT-REPORT.md  Cargo.toml  DIVERGENCES.md  README.md
examples/: write_read.rs
src/: def.rs  error.rs  fsprg.rs  fss.rs  hash.rs  lib.rs  mmap_cache.rs  reader.rs  verify.rs  writer.rs
tests/: test_journal.rs  test_journal_append.rs  test_journalctl_compat.rs  test_systemd_conformance.rs
