[package]
name = "qjournal"
version = "0.1.0"
edition = "2021"
description = "Cross-platform native systemd-journald compatible journal reader/writer"
license = "LGPL-2.1-or-later"
repository = "https://github.com/quitesh/quited"
readme = "README.md"
documentation = "https://docs.rs/qjournal"
keywords = ["journal", "systemd", "journald", "logging", "journalctl"]
categories = ["encoding", "parsing"]

[dependencies]
# libc for clock_gettime on Linux
libc = "0.2"
# Cross-platform memory-mapped file I/O
memmap2 = "0.9"
# UUID / ID128 generation for file_id, machine_id, seqnum_id, boot_id
uuid = { version = "1", features = ["v4"] }
# Ordered hashmap for chain cache (insertion-order LRU eviction, matching systemd's ordered_hashmap)
indexmap = "2"
# SipHash-2-4 for keyed hashing (systemd HEADER_INCOMPATIBLE_KEYED_HASH)
siphasher = "1"
# zstd compression (the format's preferred modern codec)
zstd = { version = "0.13", optional = true }
# XZ/LZMA decompression (legacy journal compression)
xz2 = { version = "0.1", optional = true }
# LZ4 decompression (legacy journal compression, block format)
lz4_flex = { version = "0.11", optional = true }
# thiserror for ergonomic error types
thiserror = "1"
# byteorder for little-endian layout helpers
byteorder = "1"
# FSPRG (forward-secure pseudorandom generator) dependencies
num-bigint = { version = "0.4", optional = true }
num-integer = { version = "0.1", optional = true }
num-traits = { version = "0.2", optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
rand = { version = "0.8", optional = true }

[features]
default = ["zstd-compression"]
zstd-compression = ["dep:zstd"]
xz-compression = ["dep:xz2"]
lz4-compression = ["dep:lz4_flex"]
all-compression = ["zstd-compression", "xz-compression", "lz4-compression"]
fss = ["dep:num-bigint", "dep:num-integer", "dep:num-traits", "dep:sha2", "dep:hmac", "dep:rand"]

[[example]]
name = "write_read"
path = "examples/write_read.rs"
